--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,52 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", serif;
+}
+
 body {
   background-color: rgb(11, 26, 51);
+}
+
+.nav_bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  position: fixed;
+  top: 0;
+}
+
+ul a{
+  cursor: pointer;
+}
+
+a:hover{
+  color: rgb(107, 211, 211) !important;
+  border-bottom: 2px solid white;
+}
+.active {
+  color: rgb(107, 211, 211) !important;
+  border-bottom: 2px solid white;
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 10px;
+  font-size: 20px;
+  list-style: none;
   color: white;
+}
+
+.my_item {
+  font-size: 25px;
+  background: linear-gradient(to right, rgb(145, 245, 145), white);
+  background-clip: text;
+  color: transparent;
+  padding: 10px;
 }
