--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -1,15 +1,15 @@
 #skills {
-   width: 100%;
-   height: 100%;
-   display: flex;
- }
+  width: 100%;
+  height: 100%;
+  /* display: flex; */
+}
 
- .skill{
-   color: white;
- }
+.skill {
+  color: white;
+}
 
- .card{
-  width: 100px;
+.card {
+  width: 230px;
   height: 140px;
   background-color: rgb(18, 40, 58);
   position: relative;
@@ -22,21 +22,25 @@
   border-radius: 10px;
   transition: all 0.2s;
   cursor: pointer;
- }
+}
 
- .card:hover{
+.card:hover {
   box-shadow: 2px 2px 10px rgb(87, 195, 219), 2px 2px 20px rgb(82, 205, 207);
- }
+}
 
- .hovercard img{
-  width: 80%;
+.hovercard img {
+  height: 70%;
   filter: drop-shadow(2px 2px 10px black);
- }
+}
 
- .hovercard {
+.hovercard {
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top, rgba(88, 204, 227, 0.449), rgba(12, 17, 20, 0.495));
+  background: linear-gradient(
+    to top,
+    rgba(88, 204, 227, 0.449),
+    rgba(12, 17, 20, 0.495)
+  );
   position: absolute;
   bottom: 0;
   transform: translateY(100%);
@@ -45,15 +49,14 @@
   align-items: center;
   justify-content: center;
   backdrop-filter: 7px;
- }
+}
 
- .card:hover .hovercard{
+.card:hover .hovercard {
   transform: translateY(0%);
- }
+}
 
- .card h1 {
+.card h1 {
   background: linear-gradient(to right, rgb(98, 193, 217), white);
   background-clip: text;
   color: transparent;
- }
-
+}
