--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -1,35 +1,49 @@
 #skills {
   width: 100%;
   height: 100%;
-  display: flex;
+  /* display: flex; */
+}
+
+.skiltxt {
+  margin-left: 3%;
 }
 
 .skills {
   color: white;
-  display: flex;
-  
-  
-  
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  font-size: 60px;
+  background: linear-gradient(to top, rgb(7, 70, 164), white);
+  background-clip: text;
+  color: transparent;
+  /* display: flex; */
 }
+
 .container {
-  width: 900px;
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  
   gap: 20px;
- 
 }
-.items{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   flex-direction: row;
+
+.items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
 }
- 
 
+.one,
+.two {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  gap: 40px;
+  margin: 40px;
+}
 
-
-
-
+.three {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+}
