--- a/src/Components/ProjetsCard/ProjetsCard.css
+++ b/src/Components/ProjetsCard/ProjetsCard.css
@@ -1,30 +1,41 @@
 .prjctcard {
   max-width: 400px;
-  height: 300px;
-  background-color: white;
+  height: 320px;
+  background-color: rgba(0, 0, 0, 0.189);
+  border: 2px solid
+  yellow;
   border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   margin: 20px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .prjctcard img {
-  padding: 20px;
-  text-align: center;
+  width: 150px;
+  height: 100px;
+  margin-top: 20px;
+  border: 2px solid yellowgreen;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  
 }
 
 .cardtitle {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #333;
-  margin-bottom: 10px;
+  color: white;
+  margin-top: 10px;
+  text-align: center;
 }
 .description{
   font-size: 1rem;
-  color: #666;
+  color: white;
   line-height: 1.5;
-  margin-bottom: 20px;
+  margin: 20px;
+  text-align: center;
+  word-wrap: break-word;
+
 }
 
 .btn {
@@ -37,6 +48,8 @@
   transition: all 0.2s;
   padding: 10px 20px;
   margin-left: 15px;
+  margin-top: 10px;
+  
 }
 
 .btn:hover {
