--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,18 +1,28 @@
 #about {
   width: 100%;
   height: 100%;
-  display: flex;
+  scroll-margin-top: 100px;
 }
 
 .leftabout {
   width: 50%;
-  height: 100vh;
+  padding: 80px 0px 120px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 40px;
+  margin-left: 150px;
 }
 
+.abt{
+  color: white;
+  letter-spacing: 2px;
+  font-size: 60px;
+  background: linear-gradient(to top, rgb(7, 70, 164), white);
+  background-clip: text;
+  color: transparent;
+  
+}
 .circle-line {
   display: flex;
   align-items: center;
@@ -54,4 +64,24 @@
 }
 .aboutdetails span {
   color: #93ecfc;
+}
+
+@media(max-width:768px){
+  #about {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media(max-width:320px){
+  #about {
+    width: 100%;
+    height: 100%;
+    display: inline;
+    justify-content: center;
+    align-items: center;
+  }
 }
