--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -5,6 +5,8 @@
 
 .cnt {
   display: flex;
+  align-self: center;
+  justify-content: center;
 }
 
 .cnt-heading {
@@ -19,7 +21,7 @@
 }
 
 .leftcontact {
-  width: 50%;
+  width: 70%;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -27,7 +29,7 @@
 }
 
 .leftcontact img {
-  width: 50%;
+  width: 100%;
   filter: drop-shadow(2px 2px 10px rgb(87, 196, 220));
 }
 
@@ -116,4 +118,97 @@ form input {
 
 .icon :hover {
   box-shadow: 2px 2px 10px rgb(105, 208, 215), 2px 2px 20px rgb(105, 208, 215);
+}
+
+@media (max-width: 768px) {
+  .cnt {
+    display: block;
+  }
+
+  .leftcontact {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .rightcontact {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+  .firstinput {
+    margin-top: 20px;
+  }
+
+  .sbmtbtn {
+    margin-bottom: 20px;
+  }
+
+  .cnt-heading {
+    font-size: 45px;
+  }
+
+  .icon {
+    margin-top: 30px;
+  }
+
+  .contact-imgs {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 320px) {
+  .cnt-heading {
+    color: white;
+    letter-spacing: 2px;
+    margin-bottom: 30px;
+    font-size: 40px;
+    background: linear-gradient(to top, rgb(7, 70, 164), white);
+    background-clip: text;
+    color: transparent;
+    margin-top: 90px;
+  }
+
+  .items {
+    background-color: black;
+    margin: 3px;
+    height: 70px;
+    width: 70px;
+    border-radius: 200px;
+    border: 3px solid yellow;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    margin-bottom: 50px;
+  }
+
+  .icon :hover {
+    box-shadow: 2px 2px 10px rgb(105, 208, 215), 2px 2px 20px rgb(105, 208, 215);
+  }
+}
+
+@media (max-width: 1024px) {
+  .items {
+    background-color: black;
+    margin: 3px;
+    height: 70px;
+    width: 70px;
+    border-radius: 200px;
+    border: 3px solid yellow;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    margin-bottom: 50px;
+  }
+
+  .icon :hover {
+    box-shadow: 2px 2px 10px rgb(105, 208, 215), 2px 2px 20px rgb(105, 208, 215);
+  }
 }
