--- a/src/Components/Navbar/Nav.css
+++ b/src/Components/Navbar/Nav.css
@@ -6,7 +6,7 @@ nav {
   align-items: center;
   padding: 40px;
   position: fixed;
-  top: 0; 
+  top: 0;
   z-index: 20;
   background-color: rgb(11, 26, 51);
 }
@@ -30,7 +30,7 @@ nav h1 {
 
 .active {
   color: rgb(107, 211, 211);
-  border-bottom: 2px solid white;
+  /* border-bottom: 2px solid white; */
 }
 
 nav ul a:hover {
@@ -38,7 +38,46 @@ nav ul a:hover {
   border-bottom: 2px solid white;
 }
 
-nav ul a{
-   cursor: pointer;
- }
- 
+nav ul a {
+  cursor: pointer;
+}
+
+.bars {
+  font-size: 30px;
+  cursor: pointer;
+  color: aliceblue;
+  display: none;
+}
+
+/* Mobile menu styling */
+.mobilemenu {
+  position: absolute;
+  top: 80px;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  gap: 50px;
+  background-color: rgb(11, 26, 51);
+  backdrop-filter: blur(7px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(100%);
+  transition: all 0.5s ease-in-out;
+}
+
+.mobilemenu.open {
+  transform: translateX(0);
+}
+
+
+@media (max-width: 750px) {
+  .desktop_menu {
+    display: none;
+  }
+
+  .bars {
+    display: block;
+  }
+}
