--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,20 +1,28 @@
 #projets{
-   width: 100%;
-   height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .prjcts {
-   color: white;
-   letter-spacing: 2px;
-   margin-bottom: 30px;
-   font-size: 60px;
-   background: linear-gradient(to top, rgb(7, 70, 164), white);
-   background-clip: text;
-   color: transparent;
-   margin-top: 90px;
- }
+  color: white;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  font-size: 60px;
+  background: linear-gradient(to top, rgb(7, 70, 164), white);
+  background-clip: text;
+  color: transparent;
+  margin-top: 90px;
+}
+.prjctcont {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+@media(max-width:576px){
  .prjctcont {
-   display: flex;
+   display: block;
    align-content: center;
    justify-content: center;
  }
+}
