--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,13 +1,10 @@
 #home {
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  height: 100%;
   display: flex;
+  overflow: hidden;
 }
 
-
-body {
-  overflow-x: hidden;
-}
 .lefthome {
   width: 50%;
   height: 100vh;
@@ -107,4 +104,25 @@ body {
     justify-items: center;
     align-items: center;
   }
+}
+ 
+@media (max-width: 320px) {
+.line2{
+  font-size: 2rem;
+}
+
+.righthome img{
+  margin-top: 10px;
+  width: 60%;
+}
+
+#home {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 }
