--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,6 +1,7 @@
-#projets{
+#projets {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .prjcts {
@@ -14,15 +15,23 @@
   margin-top: 90px;
 }
 .prjctcont {
+  height: 100%;
   display: flex;
   align-content: center;
   justify-content: center;
 }
 
-@media(max-width:576px){
- .prjctcont {
-   display: block;
-   align-content: center;
-   justify-content: center;
- }
+@media (max-width: 576px) {
+  .prjctcont {
+    display: block;
+    align-content: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 320px) {
+  .prjcts {
+    letter-spacing: 0px;
+    font-size: 20px;
+  }
 }
