--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   /* display: flex; */
+  overflow: hidden;
 }
 
 .skiltxt {
@@ -60,5 +61,11 @@
 
   .skills {
     font-size: 45px;
+  }
+}
+@media (max-width: 320px) {
+  #skills {
+    width: 100%;
+    height: 100%;
   }
 }
