--- a/src/Components/ProjetsCard/ProjetsCard.css
+++ b/src/Components/ProjetsCard/ProjetsCard.css
@@ -11,13 +11,19 @@
 }
 
 .prjctcard img {
-  width: 90%;
-  height: 90%;
- border: 2px solid yellowgreen;
+  width: 100%;
+  height: 100%;
+  border: 2px solid yellowgreen;
   display: flex;
   align-content: center;
   justify-content: center;
   border-radius: 10px;
+  object-fit: cover;
+}
+
+.projectImg {
+  height: 240px;
+  width: 100%;
 }
 
 .cardtitle {
@@ -77,4 +83,6 @@
   .prjcts {
     font-size: 45px;
   }
+
+  
 }
